iac_benchmark/multi_root_templates/Tianyi2__IRIS/data__terraform_collected_templates_new__group_35356_Terraform/security.tf
resource "aws_security_group" "this" {
  name        = "flaskapp-security-group"
  description = "Security group for Flask app EC2 instance"
  vpc_id      = aws_vpc.this.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # All protocols
    cidr_blocks = ["0.0.0.0/0"]
  }
}
